added the scam checking and started a backend

--- a/test/fixtures/scams.yml
+++ b/test/fixtures/scams.yml
@@ -2,10 +2,12 @@
 
 one:
   title: MyString
-  email: MyString
-  text: MyString
+  sender: MyString
+  messsage: MyString
+  result: MyString
 
 two:
   title: MyString
-  email: MyString
-  text: MyString
+  sender: MyString
+  messsage: MyString
+  result: MyString
